--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,15 +12,13 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-    networks:
-      - airflow_network
 
   airflow-webserver:
     image: apache/airflow:latest
     depends_on:
       - mysql
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqldb://airflow:airflow@mysql/airflow'
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
     volumes:
       - ./dags:/opt/airflow/dags
@@ -28,45 +26,35 @@ services:
       - ./plugins:/opt/airflow/plugins
     ports:
       - "8181:8080"
-    command: /bin/bash -c "sleep 10 && airflow webserver"
+    command: webserver
     restart: always
-    networks:
-      - airflow_network
 
   airflow-scheduler:
     image: apache/airflow:latest
     depends_on:
       - mysql
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqldb://airflow:airflow@mysql/airflow'
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
-    command: /bin/bash -c "sleep 10 && airflow scheduler"
+    command: scheduler
     restart: always
-    networks:
-      - airflow_network
 
   airflow-init:
     image: apache/airflow:latest
     depends_on:
       - mysql
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqldb://airflow:airflow@mysql/airflow'
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
-    entrypoint: /bin/bash -c "sleep 10 && airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
-    restart: always
-    networks:
-      - airflow_network
+    entrypoint: /bin/bash -c "airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
+    restart: "no"
 
 volumes:
   mysql_data:
-
-networks:
-  airflow_network:
-    driver: bridge
