--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,58 @@
 version: '3'
+x-airflow-common:
+  &airflow-common
+  image: apache/airflow:2.0.0
+  environment:
+    - AIRFLOW__CORE__EXECUTOR=LocalExecutor
+    - AIRFLOW__CORE__SQL_ALCHEMY_CONN=postgresql+psycopg2://postgres:postgres@postgres:5432/airflow
+    - AIRFLOW__CORE__FERNET_KEY=FB0o_zt4e3Ziq3LdUUO7F2Z95cvFFx16hU8jTeR1ASM=
+    - AIRFLOW__CORE__LOAD_EXAMPLES=False
+    - AIRFLOW__CORE__LOGGING_LEVEL=INFO
+  volumes:
+    - ./dags:/opt/airflow/dags
+    - ./airflow-data/logs:/opt/airflow/logs
+    - ./airflow-data/plugins:/opt/airflow/plugins
+    - ./airflow-data/airflow.cfg:/opt/airlfow/airflow.cfg
+  depends_on:
+    - postgres
+
 services:
-  mysql:
-    image: mysql:latest
+  postgres:
+    image: postgres:12
     environment:
-      MYSQL_ROOT_PASSWORD: airflow
-      MYSQL_DATABASE: airflow
-      MYSQL_USER: airflow
-      MYSQL_PASSWORD: airflow
-    container_name: mysql
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=airflow
+      - POSTGRES_PORT=5432
     ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+      - "5432:5432"
+
+  airflow-init:
+    << : *airflow-common
+    container_name: airflow_init
+    entrypoint: /bin/bash
+    command:
+      - -c
+      - airflow users list || ( airflow db init &&
+        airflow users create
+          --role Admin
+          --username airflow
+          --password airflow
+          --email airflow@airflow.com
+          --firstname airflow
+          --lastname airflow )
+    restart: on-failure
 
   airflow-webserver:
-    image: apache/airflow:latest
-    depends_on:
-      - mysql
-    environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
+    << : *airflow-common
+    command: airflow webserver
     ports:
-      - "8181:8080"
-    command: webserver
+      - 8080:8080
+    container_name: airflow_webserver
     restart: always
 
   airflow-scheduler:
-    image: apache/airflow:latest
-    depends_on:
-      - mysql
-    environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-    command: scheduler
+    << : *airflow-common
+    command: airflow scheduler
+    container_name: airflow_scheduler
     restart: always
-
-  airflow-init:
-    image: apache/airflow:latest
-    depends_on:
-      - mysql
-    environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-    entrypoint: /bin/bash -c "airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
-    restart: "no"
-
-volumes:
-  mysql_data:
