--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    networks:
+      - airflow-network
 
   airflow-webserver:
     image: apache/airflow:latest
@@ -28,6 +30,8 @@ services:
       - "8181:8080"
     command: webserver
     restart: always
+    networks:
+      - airflow-network
 
   airflow-scheduler:
     image: apache/airflow:latest
@@ -42,6 +46,8 @@ services:
       - ./plugins:/opt/airflow/plugins
     command: scheduler
     restart: always
+    networks:
+      - airflow-network
 
   airflow-init:
     image: apache/airflow:latest
@@ -55,6 +61,12 @@ services:
       - ./plugins:/opt/airflow/plugins
     entrypoint: /bin/bash -c "airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
     restart: "no"
+    networks:
+      - airflow-network
 
 volumes:
   mysql_data:
+
+networks:
+  airflow-network:
+    driver: bridge
