--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,19 +50,17 @@ services:
       - airflow-network
 
   airflow-init:
-    image: apache/airflow:latest
-    depends_on:
-      - mysql
-    environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-    entrypoint: /bin/bash -c "airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
-    restart: "no"
-    networks:
-      - airflow-network
+  image: apache/airflow:latest
+  depends_on:
+    - mysql
+  environment:
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
+  volumes:
+    - ./dags:/opt/airflow/dags
+    - ./logs:/opt/airflow/logs
+    - ./plugins:/opt/airflow/plugins
+  entrypoint: /bin/bash -c "until nc -z mysql 3306; do echo 'Waiting for MySQL...'; sleep 5; done; airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
+  restart: "no"
 
 volumes:
   mysql_data:
