--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  mysql:
+  mysql_db:
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: airflow
@@ -52,14 +52,14 @@ services:
   airflow-init:
     image: apache/airflow:latest
     depends_on:
-      - mysql
+      - mysql_db
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql/airflow'
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflow@mysql_db/airflow'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
-    entrypoint: /bin/bash -c "until nc -z mysql 3306; do echo 'Waiting for MySQL...'; sleep 5; done; airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
+    entrypoint: /bin/bash -c "until nc -z mysql_db 3306; do echo 'Waiting for MySQL...'; sleep 5; done; airflow db init && airflow users create --username admin --password admin --firstname Admin --lastname Admin --role Admin --email admin@example.com"
     restart: "no"
 
 volumes:
